<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
 	android:layout_alignParentBottom="true"
    android:background="#FF0033"
    android:orientation="horizontal">
    	    <Button
	        android:id="@+id/connect_status"
            android:layout_width="wrap_content"
  	    	android:layout_height="wrap_content"
  	    	android:layout_weight="1"
  	    	android:text="@string/disconnected"
	        />
  	    <Button
	        android:id="@+id/start"
            android:layout_width="wrap_content"
  	    	android:layout_height="wrap_content"
    	 	android:layout_toRightOf="@id/connect_status"
    	 	android:layout_weight="1"
 	    	android:text="@string/start"
	        />
  	    <Button
	        android:id="@+id/warnning"
            android:layout_width="wrap_content"
  	    	android:layout_height="wrap_content"
  	    	android:layout_toRightOf="@id/start"
  	    	android:layout_weight="1"
  	    	android:text="@string/order"
	        />
   	    <Button
	        android:id="@+id/check"
            android:layout_width="wrap_content"
  	    	android:layout_height="wrap_content"
  	    	android:layout_toRightOf="@id/warnning"
  	    	android:layout_weight="1"
  	    	android:text="@string/check"
	        />
   	    <Button
	        android:id="@+id/storaged"
            android:layout_width="wrap_content"
  	    	android:layout_height="wrap_content"
  	    	android:layout_toRightOf="@id/check"
  	    	android:layout_weight="1"
  	    	android:text="@string/storaged"
	        />
   	    <Button
	        android:id="@+id/sign_in"
            android:layout_width="wrap_content"
  	    	android:layout_height="wrap_content"
  	    	android:layout_toRightOf="@id/storaged"
  	    	android:layout_weight="1"
 	    	android:text="@string/sign"
	        />
</LinearLayout>